# Tool-Finder

./: AGENTS.md  AUDIT_CHECKLIST.md  CONNECTORS.md  README.md  TEST_CASES.md  TODO_BUILD_ORDER.md  V1_RULES.md  fastener_fixture_3.json  pyproject.toml
FIXTURES/: fastener_fixture_2.json  fastener_fixture_5.json
fixtures/: fastener_fixture_1.json  fastener_fixture_2.json  fastener_fixture_4.json
tests/: test_v1_rules.py  test_v1_scaffold.py
tool_finder/: __init__.py  api.py  cost_engine.py  deadline_engine.py  explanations.py  match_engine.py  ontology.py  profile_builder.py  ranking_engine.py  schemas.py  service.py  vendor_trust.py
tool_finder/connectors/: base.py  registry.py
tool_finder/ontology/: fasteners.py
tool_finder/supplier_connectors/: base.py  normalization.py  registry.py
tool_finder/supplier_connectors/api/: mock_api.py
tool_finder/supplier_connectors/discovery/: placeholder.py
tool_finder/supplier_connectors/scrape/: mock_scrape_a.py  mock_scrape_b.py
